--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     image: mysql:5.7
     restart: always
     volumes:
-       #- db_data:/var/lib/mysql
-       - ./mysql:/var/lib/mysql
+       - db_data:/var/lib/mysql
+       #- ./mysql:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: password
     networks:
